# hamacs

./: .ghci  .gitignore  Makefile  MyHint.hs  MyModule.hs  README.md  configure  default.nix  elisp-ghci.cabal  hamacs.cabal  hie.yaml  log.org  rebuild.sh  run.el  run.sh
.github/workflows/: test.yml
cbits/: emacs-module.h  stab.c
integration/: Makefile  MyModule.hs
nix/offline/: sources.json
script/hapack/: HaPack.hs  hapack.cabal
src/: Emacs.hs  gen-nix-ghc-libdir.nix
src/Emacs/: Command.hs  Core.hs  Function.hs  Hint.hs  Init.hs  Internal.hs  NAdvice.hs  Package.hs  Prelude.hs  Pretty.hs  Symbol.hs  Test.hs  Text.hs  Type.hs  Validation.hs
src/Emacs/Api/Lisp/: Replace.hs  Subr.hs
src/Emacs/Api/Native/: Buffer.hs  Doc.hs  Eval.hs  Package.hs  Search.hs  String.hs
src/Emacs/Hint/: Start.hs  Type.hs
src/Emacs/Internal/: Check.hs  Eq.hs  Funcall.hs  FuncallN.hs  Function.hs  Integer.hs  Intern.hs  List.hs  Nil.hs  String.hs  T.hs  TypeOf.hs
src/Emacs/Package/: Cabal.hs
src/Emacs/Type/: Annotations.hs  CallableInstances.hs  FromEmacsValueInstances.hs  ToEmacsConsInstances.hs  ToEmacsFunctionInstances.hs  ToEmacsKeywordInstances.hs  ToEmacsListInstances.hs  ToEmacsSymbolInstances.hs  ToEmacsValueInstances.hs
