cabal-version: 3.8
name: elisp-ghci
version: 0.1.1.0
build-type: Configure
license: GPL-3.0-only
license-file: LICENSE
copyright: 2016 Takenari Shinohara
maintainer: takenari.shinohara@gmail.com
homepage: http://github.com/githubuser/haskelisp#readme
synopsis: Write Emacs module in Haskell, using Emacs 25's Dynamic Module feature
description:
    Write Emacs module in Haskell, using Emacs 25's Dynamic Module feature.
category: Editor, Emacs
author: Takenari Shinohara

extra-tmp-files:     eval.buildinfo

extra-source-files:
    README.md
    configure
    cbits/*.c
    cbits/*.h

source-repository head
    type: git
    location: https://github.com/githubuser/haskelisp

library
    exposed-modules:
        Emacs
        Emacs.Type
        Emacs.Init
        Emacs.Internal
        Emacs.Symbol
        Emacs.Core
        Emacs.Function
        Emacs.Command
        Emacs.NAdvice
    build-depends:
        base >=4.7 && <5,
        protolude,
        containers,
        mtl,
        text
    c-sources:
        cbits/stab.c
    default-language: Haskell2010
    include-dirs: cbits/
    hs-source-dirs: src
