cabal-version: 3.8
name: hamacs
version: 0.0.1
build-type: Simple
license: GPL-3.0-only
license-file: LICENSE
copyright: 2025 Daniil Iaitskov
maintainer: dyaitskov@gmail.com
homepage: http://github.com/yaitskov/hamacs
synopsis: Haskell as an Emacs embedded scripting launguage
description:
    Hamacs is not first project trying to marry Haskell with Emacs.
    Previous attempts assumed Hasell modules compilation into a shared libary.
    This requirement makes extensions in Haskell to clumsy in comperison with native Lisp extensions.
    The second reason prompted me to write the extension is non-inclusive Melpa policy for publishing extensions.
    I wrote a few Emacs modules in its Lisp dialect (color-mode, bullet-proof-general, niv-mode),
    and besides filibaster of review process,  I had terrible experience while debugging Lisp code.
    Based on haskelisp project of Takenari Shinohara.

category: Editor, Emacs, Hamacs
author: Daniil Iaitskov

extra-tmp-files:     eval.buildinfo

extra-source-files:
    README.md
    configure
    cbits/*.c
    cbits/*.h

source-repository head
    type: git
    location: https://github.com/yaitskov/hamacs

library
    default-extensions:
        ImportQualifiedPost
        LambdaCase
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        TypeFamilies
    exposed-modules:
        Emacs
        Emacs.Api.Lisp.Subr
        Emacs.Api.Lisp.Replace
        Emacs.Api.Native.Buffer
        Emacs.Api.Native.Doc
        Emacs.Api.Native.Eval
        Emacs.Api.Native.Package
        Emacs.Api.Native.Search
        Emacs.Api.Native.String
        Emacs.Command
        Emacs.Core
        Emacs.Function
        Emacs.Hint
        Emacs.Hint.Start
        Emacs.Hint.Type
        Emacs.Init
        Emacs.Internal
        Emacs.Internal.Check
        Emacs.Internal.Eq
        Emacs.Internal.Funcall
        Emacs.Internal.Function
        Emacs.Internal.Integer
        Emacs.Internal.Intern
        Emacs.Internal.Nil
        Emacs.Internal.String
        Emacs.Internal.T
        Emacs.Internal.TypeOf
        Emacs.NAdvice
        Emacs.Package
        Emacs.Package.Cabal
        Emacs.Prelude
        Emacs.Pretty
        Emacs.Symbol
        Emacs.Text
        Emacs.Test
        Emacs.Type
        Emacs.Type.Annotations
        Emacs.Type.CallableInstances
        Emacs.Type.FromEmacsValueInstances
        Emacs.Type.ToEmacsConsInstances
        Emacs.Type.ToEmacsKeywordInstances
        Emacs.Type.ToEmacsSymbolInstances
        Emacs.Type.ToEmacsValueInstances
        Emacs.Validation
    build-depends:
      , Cabal < 4
      , Cabal-syntax < 4
      , aeson < 3
      , base >=4.7 && <5
      , cases
      , containers < 1
      , directory < 2
      , exceptions
      , filepath < 2
      , generic-lens < 3
      , hint
      , lens < 6
      , pretty-simple < 5
      , mtl
      , refined < 1
      , relude
      , stm
      , text
      , time
      , unliftio
      , unliftio-core
      , wl-pprint-text < 2
      , yaml < 1
      -- testing
      , QuickCheck
      , tasty
      , tasty-hunit
      , tasty-quickcheck

    c-sources:
        cbits/stab.c
    default-language: GHC2024
    ghc-options: -Wall -threaded
    include-dirs: cbits/
    hs-source-dirs: src
