cabal-version: 3.8
name: hapack
version: 0.0.1
build-type: Simple
license: GPL-3.0-only
license-file: LICENSE
copyright: 2025 Daniil Iaitskov
maintainer: dyaitskov@gmail.com
category: Emacs
author: Daniil Iaitskov

library
  exposed-modules:
    HaPack
  build-depends:
    , base >= 4.8 && < 5
    , hamacs < 1
  default-language: GHC2024
  default-extensions:
    OverloadedRecordDot
    OverloadedStrings
    NoTemplateHaskell
  hs-source-dirs: .
